[gd_scene load_steps=16 format=3 uid="uid://8vfu0qpkbqyn"]

[ext_resource type="Script" path="res://Scripts/Ship.gd" id="1_mec73"]
[ext_resource type="Resource" uid="uid://c1yqbcmv0exjb" path="res://Scripts/Resources/Ship/Cannon_Balls/Walrus/Walrus_cb_normal.tres" id="2_jdy0i"]
[ext_resource type="Resource" uid="uid://boa0urygxkl7l" path="res://Scripts/Resources/Ship/Cannon_Balls/Walrus/Walrus_fire.tres" id="3_1ivwa"]
[ext_resource type="Resource" uid="uid://c0vhxameste02" path="res://Scripts/Resources/Ship/Cannon_Balls/Walrus/Walrus_sleep.tres" id="4_4k210"]
[ext_resource type="PackedScene" uid="uid://8j2pej8wmupm" path="res://Prefabs/User Interface/Ship/ship_menu.tscn" id="5_i6at4"]
[ext_resource type="PackedScene" uid="uid://b62gpgcp55lat" path="res://Prefabs/part_fire.tscn" id="7_f3uc6"]
[ext_resource type="PackedScene" uid="uid://cjhrkmvrhorbs" path="res://Prefabs/destroyed_fire.tscn" id="9_xnm7r"]
[ext_resource type="PackedScene" uid="uid://ce17ftvb8wfmj" path="res://Prefabs/Ships/Placeholder/ship_light.tscn" id="10_3ntwd"]
[ext_resource type="PackedScene" uid="uid://caiwl410gy684" path="res://Prefabs/Ships/Animations/ship_shooting_animation.tscn" id="10_17dri"]
[ext_resource type="PackedScene" uid="uid://b7c58lhlc68wd" path="res://Prefabs/Ships/Combat/hit_points.tscn" id="11_cq7mx"]
[ext_resource type="Script" path="res://Scripts/Ship_Cannonballs.gd" id="12_qobvx"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1kl7g"]
data = PackedVector3Array(-1, 2, 3, 1, 2, 3, -1, -2, 3, 1, 2, 3, 1, -2, 3, -1, -2, 3, 1, 2, -3, -1, 2, -3, 1, -2, -3, -1, 2, -3, -1, -2, -3, 1, -2, -3, 1, 2, 3, 1, 2, -3, 1, -2, 3, 1, 2, -3, 1, -2, -3, 1, -2, 3, -1, 2, -3, -1, 2, 3, -1, -2, -3, -1, 2, 3, -1, -2, 3, -1, -2, -3, 1, 2, 3, -1, 2, 3, 1, 2, -3, -1, 2, 3, -1, 2, -3, 1, 2, -3, -1, -2, 3, 1, -2, 3, -1, -2, -3, 1, -2, 3, 1, -2, -3, -1, -2, -3)

[sub_resource type="BoxMesh" id="BoxMesh_pqd1g"]
size = Vector3(2, 4, 6)

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_lpq68"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ggjgs"]
material = SubResource("ORMMaterial3D_lpq68")
size = Vector3(2, 4, 2)

[node name="Ship 1731189470" type="Node3D"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, 0)
script = ExtResource("1_mec73")
_name = "Whydah Gally"
ship_level = 100
ship_size = 2
cannons = 5
ship_rotation = 5
health = 40
ship_projectiles = Array[Resource]([ExtResource("2_jdy0i"), ExtResource("3_1ivwa"), ExtResource("4_4k210")])

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95013, 0)
shape = SubResource("ConcavePolygonShape3D_1kl7g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false
mesh = SubResource("BoxMesh_pqd1g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2)
visible = false
mesh = SubResource("BoxMesh_ggjgs")

[node name="Ship_Menu" parent="." instance=ExtResource("5_i6at4")]

[node name="Part_Fire" parent="." instance=ExtResource("7_f3uc6")]

[node name="Destroyed_Fire" parent="." instance=ExtResource("9_xnm7r")]

[node name="ship_light" parent="." instance=ExtResource("10_3ntwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.32676, 0)

[node name="Ship_CannonBalls" type="Node" parent="."]
script = ExtResource("12_qobvx")

[node name="Ship_Shooting_Animation" parent="." instance=ExtResource("10_17dri")]
transform = Transform3D(-1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -1.69474, -4.76837e-07, 4.4135)

[node name="Hit Points" parent="." instance=ExtResource("11_cq7mx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45607, 0, 0.450389)
